# migration-linter

./: .editorconfig  .gitignore  Makefile  README.md  README.rst  pyproject.toml  test.sql
migration_linter/: __main__.py  cli.py  linter.py  parser.py  selector.py  types.py
migration_linter/checks/: base.py  defaults.py  m102_statement_timeout.py  m201_add_column_not_null_no_default.py  m202_add_index_not_concurrently.py  m203_add_unique_index_not_concurrently.py
migration_linter/filters/: __init__.py  base.py
tests/: factories.py  test_linter.py  test_main.py  test_migration_linter.py  test_selector.py
tests/checks/: test_m102_statement_timeout.py  test_m202_add_index_not_concurrently.py  test_m203_add_unique_index_not_concurrently.py
tests/data_main/: safe_migration.sql  unsafe_migration.sql
tests/test_checks/: test_m201_add_column_not_null_no_default.py  test_m202_add_index_not_concurrently.py
tests/test_filters/: test_base.py
