[tool.poetry]
name = "migration-linter"
version = "0.1.0"
description = "Check for common database migration issues."
authors = ["QasimK <noreply@QasimK.io>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
sqlparse = "^0.3.0"
fire = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
ipdb = {version = "^0.12.2", optional = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
